[tool.poetry]
name = "asyncio-multilock"
version = "0.1.0"
description = "asyncio shared/exclusive mode lock"
authors = ["Connor Newton <connor@ifthenelse.io>"]
readme = "README.md"
packages = [{include = "asyncio_multilock"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-runner = "^6.0.0"
pytest-asyncio = "^0.20.1"
pytest-timeout = "^2.1.0"

[tool.poetry.group.type.dependencies]
mypy = "^0.971"

[tool.poetry.group.lint.dependencies]
black = "^22.6.0"
isort = {version = "^5.10.1", extras = ["colors"]}
flake8 = "^5.0.4"
flake8-noqa = "^1.2.9"
flake8-bugbear = "^22.10.27"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/legacy/"
default = false
secondary = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
