[project]
name = "asyncio-multilock"
version = "0.2.0"
description = "asyncio shared/exclusive mode lock"
authors = [
    {name = "Connor Newton", email = "connor@ifthenelse.io"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.3",
    "pytest>=8.3.2",
    "pytest-runner>=6.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
